<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/backup_and_restore_screen_left_right_padding"
    android:paddingLeft="@dimen/backup_and_restore_screen_left_right_padding"
    android:background="@android:color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/qr_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
        app:srcCompat="@drawable/qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content_title"
        style="@style/BackupAndRestoreTitleLargeBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
        android:layout_marginLeft="@dimen/backup_and_restore_margin_extra_large"
        android:layout_marginRight="@dimen/backup_and_restore_margin_extra_large"
        android:gravity="center_horizontal"
        android:text="@string/backup_and_restore_upload_qr_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BackupAndRestoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/backup_and_restore_margin_medium"
        android:layout_marginLeft="@dimen/backup_and_restore_margin_extra_large"
        android:layout_marginRight="@dimen/backup_and_restore_margin_extra_large"
        android:gravity="center_horizontal"
        android:text="@string/backup_and_restore_upload_qr_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="upload_btn_frame,upload_btn_text,upload_btn_icon" />

    <View
        android:id="@+id/upload_btn_frame"
        android:layout_width="0dp"
        android:layout_height="@dimen/backup_and_restore_btn_height"
        android:layout_marginBottom="@dimen/backup_and_restore_btn_margin_bottom"
        android:background="@drawable/backup_and_restore_btn_state_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/upload_btn_text"
        style="@style/BackupAndRestoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_and_restore_upload_qr_btn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/upload_btn_frame"
        app:layout_constraintEnd_toEndOf="@id/upload_btn_frame"
        app:layout_constraintStart_toStartOf="@id/upload_btn_frame"
        app:layout_constraintTop_toTopOf="@id/upload_btn_frame" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/upload_btn_icon"
        style="@style/BackupAndRestoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow_upload"
        android:layout_marginRight="25dp"
        app:layout_constraintBottom_toBottomOf="@id/upload_btn_frame"
        app:layout_constraintEnd_toEndOf="@id/upload_btn_frame"
        app:layout_constraintTop_toTopOf="@id/upload_btn_frame" />


</androidx.constraintlayout.widget.ConstraintLayout>
